--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "author": "Jacobo Martinez",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/cobiwave/simplefolio/issues"
+    "url": "https://github.com/nttnguyen2907/tronnguyn07.github.io.gits"
   },
-  "homepage": "https://github.com/cobiwave/simplefolio#readme",
+  "homepage": "https://github.com/nttnguyen2907/tronnguyn07.github.io.git",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.15.2",
     "parcel": "^2.8.2",
